# aiproxy

./: .drone.yml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  HOWTO_BUILD_RELEASE.md  LICENSE  README.md  docker-install.md
aiproxysrv/: .coverage  .env_pytest  .env_test  .importlinter  Dockerfile  Makefile  docker-compose.yml  dockerfile  env_template  pyproject.toml
aiproxysrv/scripts/: add_section_editor_templates.py  add_title_template.py  backfill_conversation_provider.py  compare_db_schemas.py  create_initial_user.py  export_prompt_templates.py  fix_song_auto_models.py  import_openai_costs_historical.py  init_prompt_templates.py  install_fonts.sh  seed_lyric_parsing_rules.py  seed_prompts.py  update_context_windows.py  update_music_enhance_vocals.py  update_prompt_template_models.py  verify_schema.py
aiproxysrv/src/: server.py  worker.py  wsgi.py
aiproxysrv/src/alembic/: env.py
aiproxysrv/src/api/: app.py  auth_middleware.py  json_helpers.py
aiproxysrv/src/business/: api_cost_transformer.py  chat_orchestrator.py  claude_chat_orchestrator.py  claude_chat_transformer.py  compression_orchestrator.py  compression_transformer.py  equipment_orchestrator.py  external_api_service.py  file_management_service.py  image_business_service.py  image_enhancement_service.py  image_orchestrator.py  image_text_overlay_service.py  image_text_overlay_service_v2.py  image_text_overlay_transformer.py  image_transformer.py  openai_chat_orchestrator.py  openai_chat_transformer.py  prompt_template_fallback_handler.py  prompt_template_orchestrator.py  prompt_template_processor.py  prompt_template_validator.py  sketch_business_service.py  sketch_orchestrator.py  song_business_service.py  song_mureka_transformer.py  song_orchestrator.py  song_project_orchestrator.py  song_project_transformer.py  song_release_orchestrator.py  song_release_transformer.py  song_transformer.py  workshop_orchestrator.py
aiproxysrv/src/celery_app/: __init__.py  celery_config.py  slot_manager.py  tasks.py
aiproxysrv/src/config/: allowed_models.py  model_context_windows.py  settings.py
aiproxysrv/src/db/: api_cost_service.py  conversation_service.py  database.py  equipment_service.py  image_service.py  message_service.py  models.py  sketch_service.py  song_project_service.py  song_release_service.py  song_service.py  user_service.py  workshop_service.py
aiproxysrv/src/mureka/: __init__.py  base_client.py  generation_client.py  handlers.py  instrumental_client.py
aiproxysrv/src/schemas/: chat_schemas.py  (+12 more)
aiproxysrv/tests/: test_compression_transformer.py  test_image_transformer.py  test_openai_chat_transformer.py  test_prompt_template_fallback_handler.py  test_prompt_template_processor.py  test_prompt_template_validator.py  test_schemas.py  test_song_project_transformer.py
(+346 files in other folders)
